bpo-40121: Fixes audit events raised on creating a new socket