Modules/socketmodule.c
@@ -5121,8 +5121,9 @@ sock_initobj(PyObject *self, PyObject *args, PyObject *kwds)
             }
             memcpy(&info, PyBytes_AS_STRING(fdobj), sizeof(info));
 
-            if (PySys_Audit("socket()", "iii", info.iAddressFamily,
-                            info.iSocketType, info.iProtocol) < 0) {
+            if (PySys_Audit("socket.__new__", "Oiii", s,
+                            info.iAddressFamily, info.iSocketType,
+                            info.iProtocol) < 0) {
                 return -1;
             }
 
@@ -5215,6 +5216,10 @@ sock_initobj(PyObject *self, PyObject *args, PyObject *kwds)
 #else
             proto = 0;
 #endif
+            if (PySys_Audit("socket.__new__", "Oiii", s,
+                            family, type, proto) < 0) {
+                return -1;
+            }
         }
     }
     else {
@@ -5228,6 +5233,12 @@ sock_initobj(PyObject *self, PyObject *args, PyObject *kwds)
         if (proto == -1) {
             proto = 0;
         }
+
+        if (PySys_Audit("socket.__new__", "Oiii", s,
+                        family, type, proto) < 0) {
+            return -1;
+        }
+
 #ifdef MS_WINDOWS
         /* Windows implementation */
 #ifndef WSA_FLAG_NO_HANDLE_INHERIT
